create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1755,10 +1755,10 @@ body {
   color: #465052;
 }
 .cid-rAz8sIB9Al {
-  background: #ee6e0d;
+  background: #ffffff;
   padding-top: 75px;
   padding-bottom: 75px;
-  background: linear-gradient(0deg, #ee6e0d, #ee6e0d);
+  background: linear-gradient(0deg, #ff933c, #ffffff);
 }
 .cid-rAz8sIB9Al .image-block {
   margin: auto;
@@ -1930,13 +1930,13 @@ body {
 .cid-rwJlXHhq9q {
   padding-top: 60px;
   padding-bottom: 45px;
-  background-color: #ffffff;
+  background-color: #ff4646;
 }
 .cid-rwJlXHhq9q H2 {
-  color: #0f7699;
+  color: #ffffff;
 }
 .cid-rwJlXHhq9q .mbr-section-subtitle {
-  color: #232323;
+  color: #ffffff;
 }
 .cid-rAbumtzluk {
   padding-top: 30px;
@@ -2235,7 +2235,7 @@ body {
   font-size: 17px;
 }
 .cid-rwITr16hSe .team-item .item-caption {
-  background: #0fb60d;
+  background: #a822e7;
 }
 .cid-rwITr16hSe .item-name {
   color: #ffffff;
@@ -2281,7 +2281,7 @@ body {
   font-size: 17px;
 }
 .cid-rwJ1iByiZr .team-item .item-caption {
-  background: #0fb60d;
+  background: #a822e7;
 }
 .cid-rwJ1iByiZr .item-name {
   color: #ffffff;
@@ -2435,10 +2435,10 @@ body {
 .cid-rAbuC08xyn {
   padding-top: 30px;
   padding-bottom: 0px;
-  background-color: #ffffff;
+  background-color: #ff4646;
 }
 .cid-rAbuC08xyn H2 {
-  color: #0f7699;
+  color: #ffffff;
 }
 .cid-rAbuC08xyn .mbr-section-subtitle {
   color: #232323;
@@ -2762,7 +2762,7 @@ body {
   color: #fff000;
 }
 .cid-rwOQyM5mDy {
-  padding-top: 15px;
+  padding-top: 60px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
