--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2832,6 +2832,61 @@ body {
   padding-bottom: 30px;
   background-color: #006806;
 }
+.cid-rB9vPlOl9X {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #073b4c;
+}
+.cid-rB9vPlOl9X .mbr-text,
+.cid-rB9vPlOl9X .mbr-section-btn {
+  color: #00ff06;
+}
+.cid-rB9Xlwkiqb {
+  padding-top: 60px;
+  padding-bottom: 30px;
+  background-color: #ff142e;
+}
+.cid-rB9Xlwkiqb .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rB9Xlwkiqb H2 {
+  color: #ffffff;
+}
+.cid-rB9xOSaUda {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rB9xOSaUda .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-rB9xOSaUda .section-text {
+  padding: 2rem 0;
+  color: #1b160e;
+}
+.cid-rB9xOSaUda .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rB9xOSaUda .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-rB9Vz9mYNl {
+  padding-top: 60px;
+  padding-bottom: 45px;
+  background-color: #149dcc;
+}
+.cid-rB9Vz9mYNl .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rB9Vz9mYNl H2 {
+  color: #ffffff;
+}
 .cid-rwOUlwEkR6 .navbar {
   padding: .5rem 0;
   background: #ffffff;
@@ -3238,6 +3293,77 @@ body {
 .cid-rwOUlwEkR6 .nav-link:hover,
 .cid-rwOUlwEkR6 .dropdown-item:hover {
   color: #c1c1c1 !important;
+}
+.cid-rB9O4Abesz {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rB9O4Abesz .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-rB9O4Abesz .section-text {
+  padding: 2rem 0;
+}
+.cid-rB9O4Abesz .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rB9O4Abesz .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-rB9YqBoGBr {
+  background: #ffffff;
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background: linear-gradient(0deg, #ffffff, #ffffff);
+}
+.cid-rB9YqBoGBr .image-block {
+  margin: auto;
+}
+.cid-rB9YqBoGBr figcaption {
+  position: relative;
+}
+.cid-rB9YqBoGBr figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rB9YqBoGBr .image-block {
+    width: 100% !important;
+  }
+}
+.cid-rBa0SBMttd {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rBa0SBMttd .mbr-section-subtitle {
+  color: #232323;
+}
+.cid-rBa0SBMttd H2 {
+  color: #1b160e;
+}
+.cid-rBa1o3C8z1 {
+  padding-top: 30px;
+  padding-bottom: 75px;
+  background-color: #073b4c;
+}
+.cid-rBa1o3C8z1 H3 {
+  color: #00ff06;
+}
+.cid-rBa1o3C8z1 H1 {
+  color: #74ff51;
+}
+.cid-rBa1o3C8z1 .mbr-text,
+.cid-rBa1o3C8z1 .mbr-section-btn {
+  color: #000000;
 }
 .cid-rwOTMrjJPQ {
   padding-top: 30px;
