--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2235,7 +2235,7 @@ body {
   font-size: 17px;
 }
 .cid-rwITr16hSe .team-item .item-caption {
-  background: #a822e7;
+  background: #ee6e0d;
 }
 .cid-rwITr16hSe .item-name {
   color: #ffffff;
@@ -2281,7 +2281,7 @@ body {
   font-size: 17px;
 }
 .cid-rwJ1iByiZr .team-item .item-caption {
-  background: #a822e7;
+  background: #ee6e0d;
 }
 .cid-rwJ1iByiZr .item-name {
   color: #ffffff;
@@ -2328,19 +2328,6 @@ body {
 }
 @media (max-width: 768px) {
   .cid-rwJjMRGuj5 .inner-container {
-    width: 100% !important;
-  }
-}
-.cid-rAUMTx6kVJ {
-  background: #ffffff;
-  padding-top: 90px;
-  padding-bottom: 75px;
-}
-.cid-rAUMTx6kVJ .video-block {
-  margin: auto;
-}
-@media (max-width: 768px) {
-  .cid-rAUMTx6kVJ .video-block {
     width: 100% !important;
   }
 }
