create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2782,8 +2782,8 @@ body {
 }
 .cid-ryzUp73z0K {
   background: #ffffff;
-  padding-top: 0px;
-  padding-bottom: 0px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background: linear-gradient(0deg, #ffffff, #ffffff);
 }
 .cid-ryzUp73z0K .image-block {
@@ -2838,7 +2838,7 @@ body {
 .cid-rwOTMrjJPQ {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-image: url("../../../assets/images/background5.jpg");
+  background-color: #006806;
 }
 .cid-rB9vPlOl9X {
   padding-top: 30px;
