create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1929,7 +1929,7 @@ body {
 .cid-rwJlXHhq9q {
   padding-top: 60px;
   padding-bottom: 45px;
-  background-color: #ff4646;
+  background-color: #073b4c;
 }
 .cid-rwJlXHhq9q H2 {
   color: #ffffff;
@@ -2135,7 +2135,7 @@ body {
 .cid-rAz4jhjmjW {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #ff933c;
+  background-color: #ffaa4d;
 }
 .cid-rAz4jhjmjW .card-box {
   background-color: #ffffff;
@@ -2169,6 +2169,11 @@ body {
 .cid-rAz4jhjmjW P {
   color: #232323;
 }
+.cid-rwIRWwe3pX {
+  padding-top: 60px;
+  padding-bottom: 15px;
+  background-image: url("../../../assets/images/design-sem-nome-2-1920x1080.jpg");
+}
 .cid-rwIRkCyQCI {
   background: #ffffff;
   padding-top: 15px;
@@ -2190,11 +2195,6 @@ body {
   .cid-rwIRkCyQCI .image-block {
     width: 100% !important;
   }
-}
-.cid-rwIRWwe3pX {
-  padding-top: 60px;
-  padding-bottom: 15px;
-  background-image: url("../../../assets/images/design-sem-nome-2-1920x1080.jpg");
 }
 .cid-rwITr16hSe {
   padding-top: 75px;
@@ -2421,7 +2421,7 @@ body {
 .cid-rAbuC08xyn {
   padding-top: 30px;
   padding-bottom: 0px;
-  background-color: #ff4646;
+  background-color: #073b4c;
 }
 .cid-rAbuC08xyn H2 {
   color: #ffffff;
@@ -2480,7 +2480,7 @@ body {
 .cid-rwJp7kd3l1 {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #0fb60d;
+  background-color: #073b4c;
 }
 @media (min-width: 992px) {
   .cid-rwJp7kd3l1 .mbr-figure {
@@ -2628,14 +2628,14 @@ body {
 .cid-rrNdUwNPe7 {
   padding-top: 60px;
   padding-bottom: 30px;
-  background-color: #ffffff;
+  background-color: #073b4c;
 }
 .cid-rrNdUwNPe7 H1 {
   color: #fc8807;
 }
 .cid-rrNdUwNPe7 .mbr-text,
 .cid-rrNdUwNPe7 .mbr-section-btn {
-  color: #000000;
+  color: #ffffff;
   text-align: center;
 }
 .cid-rrNdUwNPe7 H3 {
