--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2562,7 +2562,7 @@ body {
   padding-top: 0px;
   padding-bottom: 60px;
   position: relative;
-  background-image: url("../../../assets/images/banner-soap-bars-compressed-2048x-1712x500.jpg");
+  background-image: url("../../../assets/images/large-dea8bedf1ebbac46ad46c725a019bcbfb1f1124a-800x600.png");
 }
 .cid-rykDeQKmiF p {
   color: #767676;
