create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1734,8 +1734,8 @@ body {
 }
 .cid-ryzN14gpQ2 {
   padding-top: 105px;
-  padding-bottom: 45px;
-  background-color: #036b01;
+  padding-bottom: 15px;
+  background-color: #900097;
 }
 .cid-ryzN14gpQ2 .mbr-section-subtitle {
   color: #fcff15;
@@ -1744,19 +1744,30 @@ body {
   color: #ffffff;
 }
 .cid-ryAcyKAXsy {
-  padding-top: 45px;
+  padding-top: 30px;
   padding-bottom: 45px;
   background-color: #900097;
 }
 .cid-ryAcyKAXsy .mbr-section-subtitle {
-  color: #ffffff;
+  color: #fcff00;
 }
 .cid-ryAcyKAXsy H2 {
   color: #465052;
 }
+.cid-rEpQKVb7Ej {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-rEpQKVb7Ej .mbr-section-subtitle {
+  color: #232323;
+}
+.cid-rEpQKVb7Ej H2 {
+  color: #465052;
+}
 .cid-rAz8sIB9Al {
   background: #ffffff;
-  padding-top: 75px;
+  padding-top: 30px;
   padding-bottom: 75px;
 }
 .cid-rAz8sIB9Al .image-block {
@@ -1971,13 +1982,13 @@ body {
 .cid-rwJlXHhq9q {
   padding-top: 60px;
   padding-bottom: 45px;
-  background-color: #ffffff;
+  background-color: #cc2952;
 }
 .cid-rwJlXHhq9q H2 {
-  color: #002dff;
+  color: #ffffff;
 }
 .cid-rwJlXHhq9q .mbr-section-subtitle {
-  color: #eb0000;
+  color: #ffffff;
 }
 .cid-rAbumtzluk {
   padding-top: 30px;
