--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1735,7 +1735,7 @@ body {
 .cid-ryzN14gpQ2 {
   padding-top: 105px;
   padding-bottom: 15px;
-  background-color: #900097;
+  background-color: #0b6b00;
 }
 .cid-ryzN14gpQ2 .mbr-section-subtitle {
   color: #fcff15;
@@ -1746,7 +1746,7 @@ body {
 .cid-ryAcyKAXsy {
   padding-top: 30px;
   padding-bottom: 45px;
-  background-color: #900097;
+  background-color: #0b6b00;
 }
 .cid-ryAcyKAXsy .mbr-section-subtitle {
   color: #fcff00;
@@ -1982,24 +1982,13 @@ body {
 .cid-rwJlXHhq9q {
   padding-top: 60px;
   padding-bottom: 45px;
-  background-color: #cc2952;
+  background-color: #232323;
 }
 .cid-rwJlXHhq9q H2 {
-  color: #ffffff;
+  color: #03ff50;
 }
 .cid-rwJlXHhq9q .mbr-section-subtitle {
   color: #ffffff;
-}
-.cid-rAbumtzluk {
-  padding-top: 30px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-rAbumtzluk H2 {
-  color: #000000;
-}
-.cid-rAbumtzluk .mbr-section-subtitle {
-  color: #232323;
 }
 .cid-rzxaMphR3x {
   background: #ffffff;
@@ -2022,6 +2011,17 @@ body {
   .cid-rzxaMphR3x .image-block {
     width: 100% !important;
   }
+}
+.cid-rAbumtzluk {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rAbumtzluk H2 {
+  color: #000000;
+}
+.cid-rAbumtzluk .mbr-section-subtitle {
+  color: #232323;
 }
 .cid-rwJmsIzBES {
   padding-top: 15px;
@@ -2389,68 +2389,6 @@ body {
 .cid-rwJojhQM0O P {
   text-align: center;
 }
-.cid-rAjRIHMmje {
-  padding-top: 15px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
-}
-.cid-rAjRIHMmje .mbr-slider .carousel-control {
-  background: #1b1b1b;
-}
-.cid-rAjRIHMmje .mbr-slider .carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-rAjRIHMmje .mbr-slider .carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-rAjRIHMmje .mbr-slider .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-rAjRIHMmje .mbr-gallery-item > div::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #554346;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-}
-.cid-rAjRIHMmje .mbr-gallery-item > div:hover .mbr-gallery-title::before {
-  background: transparent !important;
-}
-.cid-rAjRIHMmje .mbr-gallery-item > div:hover:before {
-  opacity: 0.7 !important;
-}
-.cid-rAjRIHMmje .mbr-gallery-title {
-  font-size: .9em;
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-  padding: 1rem;
-  color: #fff;
-  z-index: 2;
-}
-.cid-rAjRIHMmje .mbr-gallery-title:before {
-  content: " ";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  position: absolute;
-  background: #554346 !important;
-  opacity: 0.7;
-  -webkit-transition: 0.2s background ease-in-out;
-  transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-}
 .cid-rAbuC08xyn {
   padding-top: 30px;
   padding-bottom: 0px;
@@ -2713,13 +2651,13 @@ body {
 .cid-rwOQyM5mDy {
   padding-top: 60px;
   padding-bottom: 15px;
-  background-color: #ffffff;
+  background-color: #232323;
 }
 .cid-rwOQyM5mDy .mbr-section-subtitle {
   color: #232323;
 }
 .cid-rwOQyM5mDy H2 {
-  color: #ff4646;
+  color: #03ff55;
 }
 .cid-ryzUp73z0K {
   background: #ffffff;
@@ -2757,7 +2695,7 @@ body {
 .cid-rwOSaHjSYh {
   background: #ffffff;
   padding-top: 0px;
-  padding-bottom: 45px;
+  padding-bottom: 75px;
   background: linear-gradient(0deg, #ffffff, #ffffff);
 }
 .cid-rwOSaHjSYh .image-block {
@@ -2778,8 +2716,11 @@ body {
 }
 .cid-rwOTMrjJPQ {
   padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #006806;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-rwOTMrjJPQ .media-container-row .mbr-text {
+  color: #232323;
 }
 .cid-rB9vPlOl9X {
   padding-top: 30px;
@@ -3313,5 +3254,8 @@ body {
 .cid-rwOTMrjJPQ {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #006806;
+  background-color: #ffffff;
+}
+.cid-rwOTMrjJPQ .media-container-row .mbr-text {
+  color: #232323;
 }
