create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2627,10 +2627,10 @@ body {
   color: #149dcc;
 }
 .cid-rCtKL1irQa {
-  background: #efefef;
+  background: #ffffff;
   padding-top: 60px;
   padding-bottom: 60px;
-  background: linear-gradient(0deg, #efefef, #efefef);
+  background: linear-gradient(0deg, #ffffff, #ffffff);
 }
 .cid-rCtKL1irQa .image-block {
   margin: auto;
@@ -2651,13 +2651,13 @@ body {
 .cid-rwOQyM5mDy {
   padding-top: 60px;
   padding-bottom: 15px;
-  background-color: #232323;
+  background-color: #ffffff;
 }
 .cid-rwOQyM5mDy .mbr-section-subtitle {
   color: #232323;
 }
 .cid-rwOQyM5mDy H2 {
-  color: #03ff55;
+  color: #ff1111;
 }
 .cid-ryzUp73z0K {
   background: #ffffff;
@@ -3252,7 +3252,7 @@ body {
   color: #000000;
 }
 .cid-rwOTMrjJPQ {
-  padding-top: 45px;
+  padding-top: 30px;
   padding-bottom: 45px;
   background-color: #ffffff;
 }
