--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1032,13 +1032,13 @@ section.lazy-placeholder:after {
 .cid-ryzN14gpQ2 {
   padding-top: 105px;
   padding-bottom: 30px;
-  background-color: #0b6b00;
+  background-color: #b2ffaa;
 }
 .cid-ryzN14gpQ2 .mbr-section-subtitle {
   color: #fcff15;
 }
 .cid-ryzN14gpQ2 H2 {
-  color: #fcff00;
+  color: #232323;
 }
 .cid-rEpQKVb7Ej {
   padding-top: 45px;
@@ -1601,7 +1601,7 @@ section.lazy-placeholder:after {
 .cid-rAbuC08xyn {
   padding-top: 30px;
   padding-bottom: 0px;
-  background-color: #073b4c;
+  background-color: #0f7d02;
 }
 .cid-rAbuC08xyn H2 {
   color: #ffffff;
@@ -1660,7 +1660,7 @@ section.lazy-placeholder:after {
 .cid-rwJp7kd3l1 {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #073b4c;
+  background-color: #b2ffaa;
 }
 @media (min-width: 992px) {
   .cid-rwJp7kd3l1 .mbr-figure {
@@ -1673,7 +1673,7 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rwJp7kd3l1 .mbr-text {
-  color: #ffffff;
+  color: #232323;
 }
 .cid-rwJpPqf9T9 {
   padding-top: 30px;
@@ -1703,7 +1703,7 @@ section.lazy-placeholder:after {
   padding-top: 60px;
   padding-bottom: 15px;
   position: relative;
-  background-image: url("../../../assets/images/banner-soap-bars-compressed-2048x-1712x500.jpg");
+  background-color: #ffffff;
 }
 .cid-rwOL87IRSc p {
   color: #767676;
@@ -1747,7 +1747,7 @@ section.lazy-placeholder:after {
   padding-top: 0px;
   padding-bottom: 60px;
   position: relative;
-  background-image: url("../../../assets/images/large-dea8bedf1ebbac46ad46c725a019bcbfb1f1124a-800x600.png");
+  background-color: #ffffff;
 }
 .cid-rykDeQKmiF p {
   color: #767676;
@@ -1804,25 +1804,6 @@ section.lazy-placeholder:after {
 }
 .cid-rwOPeskq89 .mbr-text {
   color: #ffffff;
-}
-.cid-rrNdUwNPe7 {
-  padding-top: 60px;
-  padding-bottom: 30px;
-  background-color: #0f7d02;
-}
-.cid-rrNdUwNPe7 H1 {
-  color: #fc8807;
-}
-.cid-rrNdUwNPe7 .mbr-text,
-.cid-rrNdUwNPe7 .mbr-section-btn {
-  color: #ffffff;
-  text-align: center;
-}
-.cid-rrNdUwNPe7 H3 {
-  color: #0afc07;
-}
-.cid-rrNdUwNPe7 B {
-  color: #0afc07;
 }
 .cid-rwOQk5FSpd {
   padding-top: 60px;
