--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1903,13 +1903,13 @@ section.lazy-placeholder:after {
 .cid-rB9Xlwkiqb {
   padding-top: 30px;
   padding-bottom: 0px;
-  background-color: #fff000;
+  background-color: #ff1111;
 }
 .cid-rB9Xlwkiqb .mbr-section-subtitle {
   color: #767676;
 }
 .cid-rB9Xlwkiqb H2 {
-  color: #000000;
+  color: #ffffff;
 }
 .cid-rB9xOSaUda {
   padding-top: 30px;
@@ -2418,6 +2418,439 @@ section.lazy-placeholder:after {
 .cid-rBa1o3C8z1 .mbr-text,
 .cid-rBa1o3C8z1 .mbr-section-btn {
   color: #000000;
+}
+.cid-rwOTMrjJPQ {
+  padding-top: 30px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-rwOTMrjJPQ .media-container-row .mbr-text {
+  color: #232323;
+}
+.cid-rwOUlwEkR6 .navbar {
+  padding: .5rem 0;
+  background: #ffffff;
+  transition: none;
+  min-height: 77px;
+}
+.cid-rwOUlwEkR6 .navbar-dropdown.bg-color.transparent.opened {
+  background: #ffffff;
+}
+.cid-rwOUlwEkR6 a {
+  font-style: normal;
+}
+.cid-rwOUlwEkR6 .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-rwOUlwEkR6 .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-rwOUlwEkR6 .nav-item:focus,
+.cid-rwOUlwEkR6 .nav-link:focus {
+  outline: none;
+}
+.cid-rwOUlwEkR6 .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rwOUlwEkR6 .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-rwOUlwEkR6 .menu-logo {
+  margin-right: auto;
+}
+.cid-rwOUlwEkR6 .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-rwOUlwEkR6 .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-rwOUlwEkR6 .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-rwOUlwEkR6 .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-rwOUlwEkR6 .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-rwOUlwEkR6 .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-rwOUlwEkR6 .menu-logo .navbar-brand .navbar-logo a {
+  display: inline-flex;
+}
+.cid-rwOUlwEkR6 .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-rwOUlwEkR6 .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-rwOUlwEkR6 .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-rwOUlwEkR6 .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-rwOUlwEkR6 .dropdown .dropdown-menu {
+  background: #ffffff;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-rwOUlwEkR6 .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-rwOUlwEkR6 .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-rwOUlwEkR6 .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-rwOUlwEkR6 .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-rwOUlwEkR6 .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-rwOUlwEkR6 .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-rwOUlwEkR6 .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-rwOUlwEkR6 .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-rwOUlwEkR6 .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-rwOUlwEkR6 .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-rwOUlwEkR6 .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-rwOUlwEkR6 button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-rwOUlwEkR6 button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-rwOUlwEkR6 button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-rwOUlwEkR6 button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-rwOUlwEkR6 button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rwOUlwEkR6 button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rwOUlwEkR6 button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-rwOUlwEkR6 nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rwOUlwEkR6 nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-rwOUlwEkR6 nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-rwOUlwEkR6 nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rwOUlwEkR6 .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rwOUlwEkR6 .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-rwOUlwEkR6 .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-rwOUlwEkR6 .collapsed .navbar-collapse.collapsing,
+.cid-rwOUlwEkR6 .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-rwOUlwEkR6 .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-rwOUlwEkR6 .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-rwOUlwEkR6 .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-rwOUlwEkR6 .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-rwOUlwEkR6 .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rwOUlwEkR6 .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
+.cid-rwOUlwEkR6 .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-rwOUlwEkR6 .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-rwOUlwEkR6 .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-rwOUlwEkR6 .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-rwOUlwEkR6 .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-rwOUlwEkR6 .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-rwOUlwEkR6 .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rwOUlwEkR6 .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  overflow: hidden;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-rwOUlwEkR6 .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-rwOUlwEkR6 .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-rwOUlwEkR6 .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-rwOUlwEkR6 .navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rwOUlwEkR6 img {
+    height: 3.8rem !important;
+  }
+  .cid-rwOUlwEkR6 .btn {
+    display: -webkit-flex;
+  }
+  .cid-rwOUlwEkR6 button.navbar-toggler {
+    display: block;
+  }
+  .cid-rwOUlwEkR6 .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-rwOUlwEkR6 .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rwOUlwEkR6 .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-rwOUlwEkR6 .navbar-collapse.collapsing,
+  .cid-rwOUlwEkR6 .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-rwOUlwEkR6 .navbar-collapse.collapsing .navbar-nav,
+  .cid-rwOUlwEkR6 .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-rwOUlwEkR6 .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-rwOUlwEkR6 .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-rwOUlwEkR6 .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rwOUlwEkR6 .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rwOUlwEkR6 .navbar-collapse.collapsing .navbar-buttons,
+  .cid-rwOUlwEkR6 .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-rwOUlwEkR6 .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-rwOUlwEkR6 .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rwOUlwEkR6 .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    overflow: hidden;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-rwOUlwEkR6 .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-rwOUlwEkR6 .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-rwOUlwEkR6 .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-rwOUlwEkR6 .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-rwOUlwEkR6 .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-rwOUlwEkR6 .nav-link:hover,
+.cid-rwOUlwEkR6 .dropdown-item:hover {
+  color: #c1c1c1 !important;
+}
+.cid-rH9rXJpb0L {
+  background: #ffffff;
+}
+.cid-rH9rXJpb0L .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-rH9rXJpb0L .mbr-figure {
+  margin: 0 auto;
+}
+.cid-rH9rXJpb0L figcaption {
+  position: relative;
+}
+.cid-rH9rXJpb0L figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rH9rXJpb0L .image-block {
+    width: 100% !important;
+  }
 }
 .cid-rwOTMrjJPQ {
   padding-top: 30px;
