--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2829,26 +2829,47 @@ section.lazy-placeholder:after {
 .cid-rwOUlwEkR6 .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-rH9rXJpb0L {
+.cid-rH9thjoZan {
   background: #ffffff;
+  padding-top: 60px;
+  padding-bottom: 30px;
+  background: linear-gradient(0deg, #ffffff, #ffffff);
 }
-.cid-rH9rXJpb0L .image-block {
+.cid-rH9thjoZan .image-block {
   margin: auto;
-  width: 100% !important;
 }
-.cid-rH9rXJpb0L .mbr-figure {
-  margin: 0 auto;
-}
-.cid-rH9rXJpb0L figcaption {
+.cid-rH9thjoZan figcaption {
   position: relative;
 }
-.cid-rH9rXJpb0L figcaption div {
+.cid-rH9thjoZan figcaption div {
   position: absolute;
   bottom: 0;
   width: 100%;
 }
 @media (max-width: 768px) {
-  .cid-rH9rXJpb0L .image-block {
+  .cid-rH9thjoZan .image-block {
+    width: 100% !important;
+  }
+}
+.cid-rH9t3tCjyI {
+  background: #ffffff;
+  padding-top: 15px;
+  padding-bottom: 60px;
+  background: linear-gradient(0deg, #ffffff, #ffffff);
+}
+.cid-rH9t3tCjyI .image-block {
+  margin: auto;
+}
+.cid-rH9t3tCjyI figcaption {
+  position: relative;
+}
+.cid-rH9t3tCjyI figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rH9t3tCjyI .image-block {
     width: 100% !important;
   }
 }
