create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1052,10 +1052,10 @@ section.lazy-placeholder:after {
   color: #465052;
 }
 .cid-rHF0NvGQz1 {
-  background: #b2ffaa;
+  background: #ffffff;
   padding-top: 60px;
   padding-bottom: 60px;
-  background: linear-gradient(0deg, #b2ffaa, #ffffff);
+  background: linear-gradient(0deg, #ffffff, #ffffff);
 }
 .cid-rHF0NvGQz1 .video-block {
   margin: auto;
